# QuizMCP

./: .env  .gitignore  auth.py  config.py  database.py  main.py  mcp_server.py  models.py  pyproject.toml  schemas.py
crud/: __init__.py  questions.py  sessions.py
data/: quiz.db
routers/: __init__.py  auth.py  sessions.py
static/: index.html
static/assets/: index-BnjnwVcw.js  index-C09MpimR.js  index-C4eSXajP.js  index-C7diGtiP.css  index-CMzWEJZm.js  index-CrdCO5ey.css  index-CvurlJus.css  index-DCZNLhpV.css  index-DIDW3zVf.js
